--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
   
     <center>
-        <h1> MAPA INTERACTIVO - CONDOMINIO LAS ANGARILLAS</h1>
+        <h1> PROYECTO #1 SISTEMAS DE INFORMACIÓN GEOGRÁFICA</h1>
+        <h2> MAPA INTERACTIVO - CONDOMINIO LAS ANGARILLAS</h2>
     </center>
 
 
